--- a/akka-cluster-deployment.yml
+++ b/akka-cluster-deployment.yml
@@ -1,4 +1,26 @@
-apiVersion: extensions/v1beta1
+apiVersion: v1
+kind: Service
+metadata:
+  name: akka-cluster-demo
+  namespace: akka-cluster-1
+  labels:
+    app: akka-cluster-demo
+spec:
+  type: LoadBalancer
+  selector:
+    app: akka-cluster-demo
+  ports:
+    - name: http-endpoint
+      port: 8080
+      targetPort: 8080
+    - name: remoting
+      port: 2552
+      targetPort: 2552
+    - name: management
+      port: 8558
+      targetPort: 8558
+---
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
@@ -9,7 +31,7 @@ spec:
   replicas: 3
   selector:
     matchLabels:
-     app: akka-cluster-demo
+      app: akka-cluster-demo
   strategy:
     rollingUpdate:
       maxSurge: 1
@@ -23,27 +45,34 @@ spec:
         actorSystemName: akka-cluster-demo
     spec:
       containers:
-      - name: akka-cluster-demo
-        image: akka-cluster-demo:1.0.2
-        imagePullPolicy: Never
-        livenessProbe:
-          tcpSocket:
-            port: 8558
-        ports:
-        - name: http
-          containerPort: 8080
-          protocol: TCP
-        # akka remoting
-        - name: remoting
-          containerPort: 2552
-          protocol: TCP
-        # akka-management bootstrap
-        # must match up with contact-point-discovery.port-name for bootstrap
-        - name: management
-          containerPort: 8558
-          protocol: TCP
-        env:
-          - name: NAMESPACE
-            valueFrom:
-              fieldRef:
-                fieldPath: metadata.namespace
+        - name: akka-cluster-demo
+          image: akka-cluster-demo:latest
+          imagePullPolicy: Never
+          livenessProbe:
+            tcpSocket:
+              port: 8558
+          ports:
+            - name: http
+              containerPort: 8080
+              protocol: TCP
+            # akka remoting
+            - name: remoting
+              containerPort: 2552
+              protocol: TCP
+            # akka-management bootstrap
+            # must match up with contact-point-discovery.port-name for bootstrap
+            - name: management
+              containerPort: 8558
+              protocol: TCP
+          resources:
+            limits:
+              cpu: 4
+              memory: 8Gi
+            requests:
+              cpu: "0.1"
+              memory: 200Mi
+          env:
+            - name: NAMESPACE
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.namespace
