--- a/pom.xml
+++ b/pom.xml
@@ -9,18 +9,17 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <java.version>8</java.version>
-        <scala.version>2.12</scala.version>
-        <akka.version>2.5.23</akka.version>
-        <akka.http.version>10.1.8</akka.http.version>
-        <akka.cluster.bootstrap.version>1.0.1</akka.cluster.bootstrap.version>
+        <java.version>11</java.version>
+        <scala.version>2.13</scala.version>
+        <akka.version>2.6.16</akka.version>
+        <akka.http.version>10.2.6</akka.http.version>
+        <akka.cluster.bootstrap.version>1.1.1</akka.cluster.bootstrap.version>
         <docker.image.version>1.0.0</docker.image.version>
-        <jackson.version>2.9.9</jackson.version>
-        <junit.version>4.12</junit.version>
-        <junit.jupiter.version>5.0.2</junit.jupiter.version>
-        <junit.vintage.version>${junit.version}.0</junit.vintage.version>
-        <junit.jupiter.version>5.0.2</junit.jupiter.version>
-        <junit.platform.version>1.0.0</junit.platform.version>
+        <jackson.version>2.13.0</jackson.version>
+        <junit.version>4.13.2</junit.version>
+        <junit.jupiter.version>5.8.1</junit.jupiter.version>
+        <junit.vintage.version>${junit.jupiter.version}</junit.vintage.version>
+        <junit.platform.version>1.8.1</junit.platform.version>
     </properties>
 
     <dependencies>
@@ -52,7 +51,7 @@
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
-            <version>1.2.3</version>
+            <version>1.2.6</version>
         </dependency>
         <dependency>
             <groupId>com.typesafe.akka</groupId>
@@ -201,7 +200,7 @@
                         <image>
                             <name>akka-cluster-demo:${docker.image.version}</name>
                             <build>
-                                <from>openjdk:8-jre-alpine</from>
+                                <from>openjdk:11</from>
                                 <tags>
                                     <tag>latest</tag>
                                     <tag>${docker.image.version}</tag>
