--- a/kubernetes/akka-cluster-consul.yml
+++ b/kubernetes/akka-cluster-consul.yml
@@ -4,9 +4,9 @@ metadata:
   name: pod-reader
   namespace: akka-cluster-1
 rules:
-  - apiGroups: [ "" ] # "" indicates the core API group
-    resources: [ "pods" ]
-    verbs: [ "get", "watch", "list" ]
+  - apiGroups: [""] # "" indicates the core API group
+    resources: ["pods"]
+    verbs: ["get", "watch", "list"]
 ---
 kind: RoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
@@ -66,6 +66,8 @@ spec:
       labels:
         app: akka-cluster-demo
         actorSystemName: akka-cluster-demo
+      annotations:
+        consul.hashicorp.com/connect-inject: "true"
     spec:
       containers:
         - name: akka-cluster-demo
