Consul module appears configured, no more crashing, but discovery is failing.

--- a/kubernetes/akka-cluster-consul.yml
+++ b/kubernetes/akka-cluster-consul.yml
@@ -68,6 +68,7 @@ spec:
         actorSystemName: akka-cluster-demo
       annotations:
         consul.hashicorp.com/connect-inject: "true"
+        consul.hashicorp.com/service-tags: system:akka-cluster-demo,akka-management-port:8558
     spec:
       containers:
         - name: akka-cluster-demo
