--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -58,18 +58,34 @@ akka {
 }
 
 akka.discovery {
-  kubernetes-api {
-    pod-label-selector = "app=%s" # same as the default
+#   kubernetes-api {
+#     pod-label-selector = "app=%s" # same as the default
+#   }
+
+  method = akka-consul
+  akka-consul {
+    #How to connect to Consul to fetch services data
+    consul-host = 169.254.191.110
+    consul-port = 8500
+
+    # Prefix for consul tag with the name of the actor system / application name,
+    # services with this tag present will be found by the discovery mechanism
+    # i.e. `system:test` will be found in cluster if the cluster system is named `test`
+    application-name-tag-prefix = "system:"
+
+    # Prefix for tag containing port number where akka management is set up so that
+    # the seed nodes can be found, an example value for the tag would be `akka-management-port:19999`
+    application-akka-management-port-tag-prefix = "akka-management-port:"
   }
 }
 
 akka.management {
   cluster.bootstrap {
     contact-point-discovery {
-      # For the kubernetes API this value is substributed into the %s in pod-label-selector
+      # For the kubernetes API this value is substituted into the %s in pod-label-selector
       service-name = "akka-cluster-demo"
 
-      discovery-method = kubernetes-api
+      discovery-method = akka-consul
     }
   }
 }
