Adds Artery config commented out for reference.

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -19,6 +19,23 @@ akka {
     allow-java-serialization = true
   }
 
+#   remote.artery {
+#     transport = tls-tcp
+#
+#     ssl.config-ssl-engine {
+#       key-store = "/example/path/to/mykeystore.jks"
+#       trust-store = "/example/path/to/mytruststore.jks"
+#
+#       key-store-password = ${SSL_KEY_STORE_PASSWORD}
+#       key-password = ${SSL_KEY_PASSWORD}
+#       trust-store-password = ${SSL_TRUST_STORE_PASSWORD}
+#
+#       protocol = "TLSv1.2"
+#
+#       enabled-algorithms = [TLS_DHE_RSA_WITH_AES_128_GCM_SHA256]
+#     }
+#   }
+
   cluster {
     # Time margin after which shards or singletons that belonged to a downed/removed
     # partition are created in surviving partition. The purpose of this margin is that
