--- a/kubernetes/akka-cluster-consul.yml
+++ b/kubernetes/akka-cluster-consul.yml
@@ -68,8 +68,8 @@ spec:
         actorSystemName: akka-cluster-demo
       annotations:
         consul.hashicorp.com/connect-inject: "true"
-        consul.hashicorp.com/transparent-proxy-exclude-outbound-ports: "25520,8558"
-        consul.hashicorp.com/transparent-proxy-exclude-inbound-ports: "25520,8558"
+#        consul.hashicorp.com/transparent-proxy-exclude-outbound-ports: "25520,8558"
+        consul.hashicorp.com/transparent-proxy-exclude-inbound-ports: "25520,8558,8080"
         consul.hashicorp.com/service-tags: system:akka-cluster-demo,akka-management-port:8558
     spec:
       containers:
@@ -82,15 +82,6 @@ spec:
           ports:
             - name: http
               containerPort: 8080
-              protocol: TCP
-            # akka remoting
-            - name: remoting
-              containerPort: 25520
-              protocol: TCP
-            # akka-management bootstrap
-            # must match up with contact-point-discovery.port-name for bootstrap
-            - name: management
-              containerPort: 8558
               protocol: TCP
           resources:
             limits:
